Added Fareeda details to pod members cards

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -54,3 +54,7 @@
 - name: Shengyuan Lu
   img: ShengyuanLu.png
   location: Irvine, CA, USA
+
+- name: Fareeda Ragab
+  img: Farida.jpg
+  location: Alexandria, Egypt
