--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,12 @@ sass:
   sass_dir: _sass
 
 icon: /assets/img/icon.jpg
+
+page_gen-dirs: false # uncomment, if you prefer to generate named folders
+
+page_gen:
+  - data: 'fellows'
+    template: 'fellows'
+    name: 'name'
+    title: 'name'
+    dir: 'fellows'
