Added fellows page layout and styling

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -6,6 +6,10 @@
   twitter: https://twitter.com/MLHacks
   resume: [link to resume]
   linkedin: https://www.linkedin.com/company/major-league-hacking
+  description: testing
+  favLangs: testing
+  interests: testing
+  university: testing
 
 - name: Ziad Gamalelden
   img: ZiadGamaleldin.jpg
