Added Omeir fellow data

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -36,10 +36,10 @@
   twitter: https://twitter.com/MLHacks
   resume: [link to resume]
   linkedin: https://www.linkedin.com/company/major-league-hacking
-  description: testing
-  favLangs: testing
-  interests: testing
-  university: testing
+  description: Passionate about software and all things tech 
+  favLangs: TypeScript, Golang
+  interests: Aviation
+  university: Amity University 
 
 
 - name: Jane Ling
