Added Wisdom data

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -116,10 +116,11 @@
   twitter: https://twitter.com/MLHacks
   resume: [link to resume]
   linkedin: https://www.linkedin.com/company/major-league-hacking
-  description: testing
-  favLangs: testing
-  interests: testing
-  university: testing
+  description: Wisdom Ekpotu is a Software Engineer and a Technical writer based in Nigeria. 
+    He is passionate about web technologies, open-source, and building communities.
+  favLangs: Javascript  and Java
+  interests: Community Building, Public Speaking, Travel
+  university: University of Uyo, Nigeria
 
 
 - name: Zeyu Wang
