--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -1,11 +1,10 @@
 - name: Ahmed Atwa
   img: AhmedAtwa.jpeg
   location: Cairo, Egypt
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/Deadreyo
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: Deadreyo
+  twitter: 
+  resume: 
+  linkedin: ahmed-mohamed-atwa
   description: A programmer driven to create applications and solutions that helps people and make their life better. 
     Always learning, always adapting, always evolving. 
   favLangs: Typescript, C++
@@ -15,11 +14,10 @@
 - name: Ziad Gamalelden
   img: ZiadGamaleldin.jpg
   location: Tanta, Egypt
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/ZAK0EE
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: ZAK0EE
+  twitter: 
+  resume: 
+  linkedin: ziad-gamaleldin
   description: I'm a Computer and Automatic control Engineer,  mainly interested in low level programming and 
     specialized in Embedded systems. But also, I have experience with other fields such as Desktop applications 
     and Web development, and always eager to learn new things.
@@ -30,11 +28,10 @@
 - name: Omeir Fawaz
   img: OmeirFawaz.png
   location: New Delhi, India
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/omeiirr
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: omeiirr
+  twitter: 
+  resume: 
+  linkedin: 
   description: Passionate about software and all things tech 
   favLangs: TypeScript, Golang
   interests: Aviation
@@ -43,11 +40,10 @@
 - name: Jane Ling
   img: JaneLing.jpeg
   location: London, United Kingdom
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/jcyling
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: jcyling
+  twitter: 
+  resume: 
+  linkedin: 
   description: A self-taught software developer based in London, UK with a background in architecture and design.
   favLangs: JavaScript
   interests: Architecture & Design, Animations, 3D modelling
@@ -56,11 +52,10 @@
 - name: Yanna Lin
   img: YannaL.jpg
   location: Gainesville, Florda, USA
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/linyanna
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: linyanna
+  twitter: 
+  resume: 
+  linkedin: yanna-lin
   description: Hi, I'm Yanna! I’m attending the University of Florida, studying Computer Science with a minor in Digital Arts
    and Sciences. I have worked on a range of school-related and personal software projects, 
    and I hope to keep learning and developing my skills as a software engineer.
@@ -73,11 +68,10 @@
 - name: Bevin Duncan
   img: BevinDuncan.jpg
   location: Seattle, WA, USA
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/bevin-duncan
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: bevin-duncan
+  twitter: 
+  resume: 
+  linkedin: 
   description:   
     I am a freshly-leavened software developer--recently graduated from Flatiron School-- 
     experienced in Ruby on Rails and JavaScript based programming with a background in data science, 
@@ -92,11 +86,10 @@
 - name: Grace Gong
   img: GraceGong.jpeg
   location: Toronto, Canada
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/ggongg
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: ggongg
+  twitter: 
+  resume: 
+  linkedin: 
   description: Incoming Junior at Western University in Computer Science and Business. 
     Global Wholesale Operations Intern at Scotiabank. 
   favLangs: Javascript
@@ -106,11 +99,10 @@
 - name: Wisdom Ekpotu
   img: WisdomEkpotu.jpg
   location: Port-Harcourt, Nigeria
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/wisdomekpotu
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: wisdomekpotu
+  twitter: 
+  resume: 
+  linkedin: 
   description: Wisdom Ekpotu is a Software Engineer and a Technical writer based in Nigeria. 
     He is passionate about web technologies, open-source, and building communities.
   favLangs: Javascript  and Java
@@ -120,11 +112,10 @@
 - name: Zeyu Wang
   img: ZeyuWang.png
   location: Los Angeles, CA, USA
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/wzy0766
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: wzy0766
+  twitter: 
+  resume: 
+  linkedin: zwang0431
   description: Zeyu is a self-driven team player intertwined with strong computer skills.
   favLangs: Java/Python/JavaScript
   interests: Cooking, Traveling, Video Games
@@ -133,11 +124,10 @@
 - name: Ahmed Saed
   img: AhmedSaed.png
   location: 6th October City, Egypt
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/Ahmedsaed
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: Ahmedsaed
+  twitter: 
+  resume: 
+  linkedin: ahmedsaed26
   description: I write code 😉
   favLangs: Rust, Python
   interests: Tennis, Music
@@ -146,11 +136,10 @@
 - name: Keaton Martin
   img: Keaton.png
   location: Versailles, KY, USA
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/keatonmartin
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: keatonmartin
+  twitter: 
+  resume: 
+  linkedin: keaton-martin
   description: Hello! I am Keaton, a computer science student from Versailles, Kentucky! I am a 
     rising sophomore at the University of Kentucky. 
   favLangs: Python, C++
@@ -161,11 +150,10 @@
 - name: Yuehan Wang
   img: YuehanWang.jpeg
   location: Chicago, USA
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/Yuehan-Wang
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: Yuehan-Wang
+  twitter: 
+  resume: 
+  linkedin: 
   description: testing
   favLangs: testing
   interests: testing
@@ -174,11 +162,10 @@
 - name: Shengyuan Lu
   img: ShengyuanLu.png
   location: Irvine, CA, USA
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/shengyuan-lu
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: shengyuan-lu
+  twitter: 
+  resume: 
+  linkedin: shengyuan-lu
   description: I am an engineer by training, a software developer by profession, and a creative artist at heart.
   favLangs: Swift
   interests: Video Editing, Graphic Design
@@ -187,11 +174,10 @@
 - name: Fareeda Ragab
   img: Farida.jpg
   location: Alexandria, Egypt
-  icons: [linkedin, twitter, resume, github] 
-  github: https://github.com/farida52369
-  twitter: https://twitter.com/MLHacks
-  resume: [link to resume]
-  linkedin: https://www.linkedin.com/company/major-league-hacking
+  github: farida52369
+  twitter: 
+  resume: 
+  linkedin: fareeda-ragab
   description: interested in Programming, and Cinema
   favLangs: Java, Python
   interests: Cinema
