added Phong to the pod

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -182,3 +182,14 @@
   favLangs: Java, Python
   interests: Cinema
   university: Faculty of Engineering, Alex University, Egypt
+
+- name: Phong Nguyen
+  img: PhongNguyen.jpg
+  location: Austin, USA
+  github: farida52369
+  resume: https://drive.google.com/file/d/18sS7fzbcXDPnY_2NHLXeQFazNdsG0CVC/view?usp=sharing
+  linkedin: julian-phong-nguyen
+  description: Unfilled
+  favLangs: Unfilled
+  interests: Unfilled
+  university: Unfilled
