filled in social links for members

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -2,8 +2,7 @@
   img: AhmedAtwa.jpeg
   location: Cairo, Egypt
   github: Deadreyo
-  twitter: 
-  resume: 
+  resume: https://drive.google.com/file/d/1CXeqwLKahvFYo-q4fAIeFB1udlIazOTn/view?usp=sharing
   linkedin: ahmed-mohamed-atwa
   description: A programmer driven to create applications and solutions that helps people and make their life better. 
     Always learning, always adapting, always evolving. 
@@ -15,8 +14,7 @@
   img: ZiadGamaleldin.jpg
   location: Tanta, Egypt
   github: ZAK0EE
-  twitter: 
-  resume: 
+  resume: https://drive.google.com/file/d/1aw9i6S0GuLulkY4nG28nVwxZGGxID3Pg/view?usp=sharing
   linkedin: ziad-gamaleldin
   description: I'm a Computer and Automatic control Engineer,  mainly interested in low level programming and 
     specialized in Embedded systems. But also, I have experience with other fields such as Desktop applications 
@@ -29,9 +27,6 @@
   img: OmeirFawaz.png
   location: New Delhi, India
   github: omeiirr
-  twitter: 
-  resume: 
-  linkedin: 
   description: Passionate about software and all things tech 
   favLangs: TypeScript, Golang
   interests: Aviation
@@ -41,9 +36,6 @@
   img: JaneLing.jpeg
   location: London, United Kingdom
   github: jcyling
-  twitter: 
-  resume: 
-  linkedin: 
   description: A self-taught software developer based in London, UK with a background in architecture and design.
   favLangs: JavaScript
   interests: Architecture & Design, Animations, 3D modelling
@@ -53,8 +45,6 @@
   img: YannaL.jpg
   location: Gainesville, Florda, USA
   github: linyanna
-  twitter: 
-  resume: 
   linkedin: yanna-lin
   description: Hi, I'm Yanna! I’m attending the University of Florida, studying Computer Science with a minor in Digital Arts
    and Sciences. I have worked on a range of school-related and personal software projects, 
@@ -69,9 +59,6 @@
   img: BevinDuncan.jpg
   location: Seattle, WA, USA
   github: bevin-duncan
-  twitter: 
-  resume: 
-  linkedin: 
   description:   
     I am a freshly-leavened software developer--recently graduated from Flatiron School-- 
     experienced in Ruby on Rails and JavaScript based programming with a background in data science, 
@@ -87,9 +74,6 @@
   img: GraceGong.jpeg
   location: Toronto, Canada
   github: ggongg
-  twitter: 
-  resume: 
-  linkedin: 
   description: Incoming Junior at Western University in Computer Science and Business. 
     Global Wholesale Operations Intern at Scotiabank. 
   favLangs: Javascript
@@ -100,9 +84,6 @@
   img: WisdomEkpotu.jpg
   location: Port-Harcourt, Nigeria
   github: wisdomekpotu
-  twitter: 
-  resume: 
-  linkedin: 
   description: Wisdom Ekpotu is a Software Engineer and a Technical writer based in Nigeria. 
     He is passionate about web technologies, open-source, and building communities.
   favLangs: Javascript  and Java
@@ -113,8 +94,7 @@
   img: ZeyuWang.png
   location: Los Angeles, CA, USA
   github: wzy0766
-  twitter: 
-  resume: 
+  resume: https://drive.google.com/file/d/19MfRIAOqgcHL_p6s7ULit5nuSJtsOuLv/view?usp=sharing
   linkedin: zwang0431
   description: Zeyu is a self-driven team player intertwined with strong computer skills.
   favLangs: Java/Python/JavaScript
@@ -125,8 +105,8 @@
   img: AhmedSaed.png
   location: 6th October City, Egypt
   github: Ahmedsaed
-  twitter: 
-  resume: 
+  twitter: ahmed_saed26
+  resume: https://mustedueg-my.sharepoint.com/:f:/g/personal/200013206_must_edu_eg/EkYGE5zXbPFKqjlKKsMo1EQBP6MtMxgiZJpEMtWN4WZJig?e=teSl5S
   linkedin: ahmedsaed26
   description: I write code 😉
   favLangs: Rust, Python
@@ -137,8 +117,6 @@
   img: Keaton.png
   location: Versailles, KY, USA
   github: keatonmartin
-  twitter: 
-  resume: 
   linkedin: keaton-martin
   description: Hello! I am Keaton, a computer science student from Versailles, Kentucky! I am a 
     rising sophomore at the University of Kentucky. 
@@ -151,9 +129,6 @@
   img: YuehanWang.jpeg
   location: Chicago, USA
   github: Yuehan-Wang
-  twitter: 
-  resume: 
-  linkedin: 
   description: testing
   favLangs: testing
   interests: testing
@@ -163,8 +138,6 @@
   img: ShengyuanLu.png
   location: Irvine, CA, USA
   github: shengyuan-lu
-  twitter: 
-  resume: 
   linkedin: shengyuan-lu
   description: I am an engineer by training, a software developer by profession, and a creative artist at heart.
   favLangs: Swift
@@ -175,8 +148,8 @@
   img: Farida.jpg
   location: Alexandria, Egypt
   github: farida52369
-  twitter: 
-  resume: 
+  twitter: fareeda_ragab
+  resume: https://drive.google.com/file/d/1xHOLo_xyYnsJbRV7tICN0RfzZvPqyDfD/view?usp=sharing
   linkedin: fareeda-ragab
   description: interested in Programming, and Cinema
   favLangs: Java, Python
