--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,5 @@
 - title: Online Shopping App
+  img: shopping.jpeg
   event: MLH Prep Pod Project
   date: Fall 2021  - Batch 4.5
   page-name: project
@@ -7,6 +8,7 @@
   github: www.google.com
 
 - title: Todo List
+  img: todo.jpeg
   event: MLH Prep Pod Project
   date: Fall 2021  - Batch 4.5
   page-name: project
@@ -15,6 +17,7 @@
   github: www.google.com
 
 - title: iOS App
+  img: ios.jpeg
   event: MLH Prep Pod Project
   date: Fall 2021  - Batch 4.5
   page-name: project
