updated project card ui

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
   page-name: project
   owner: person1
   summary: An app that allows users to buy and sell items online.
-  github: www.google.com
+  github: https://google.com
 
 - title: Todo List
   img: todo.jpeg
@@ -14,7 +14,7 @@
   page-name: project
   owner: person2
   summary: An app that allows users to create and manage their todo lists.
-  github: www.google.com
+  github: https://google.com
 
 - title: iOS App
   img: ios.jpeg
@@ -23,4 +23,4 @@
   page-name: project
   owner: person3
   summary: An iOS app that allows users to create and manage stuff.
-  github: www.google.com
+  github: https://google.com
