updated so fellow name links to their page

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,7 +3,7 @@
   event: MLH Prep Pod Project
   date: Fall 2021  - Batch 4.5
   page-name: project
-  owner: person4
+  owner: MLH August Prep Pod 2
   summary: An website that shows weather updates and other cool things.
   github: https://prep-22-aug-prep-2-project.netlify.app/
 
@@ -12,7 +12,8 @@
   event: MLH Prep Pod Project
   date: Fall 2021  - Batch 4.5
   page-name: project
-  owner: person1
+  owner: Ahmed Atwa
+  owner-page: ahmed-atwa
   summary: An app that allows users to buy and sell items online.
   github: https://google.com
 
@@ -21,7 +22,8 @@
   event: MLH Prep Pod Project
   date: Fall 2021  - Batch 4.5
   page-name: project
-  owner: person2
+  owner: Yanna Lin
+  owner-page: yanna-lin
   summary: An app that allows users to create and manage their todo lists.
   github: https://google.com
 
@@ -30,6 +32,7 @@
   event: MLH Prep Pod Project
   date: Fall 2021  - Batch 4.5
   page-name: project
-  owner: person3
+  owner: Zeyu Wang
+  owner-page: zeyu-wang
   summary: An iOS app that allows users to create and manage stuff.
   github: https://google.com
