Added Yeuhan Profile Data

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -129,10 +129,10 @@
   img: YuehanWang.jpeg
   location: Chicago, USA
   github: Yuehan-Wang
-  description: testing
-  favLangs: testing
-  interests: testing
-  university: testing
+  description: A rising junior studying CS and Math
+  favLangs: TypeScript and Python
+  interests: Travelling and making friends
+  university: University of Chicago
 
 - name: Shengyuan Lu
   img: ShengyuanLu.png
