--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: 'Hack2gether'
 email: fellowship@mlh.io
 description: >- # this means to ignore newlines until "baseurl:"
   This is my portfolio website!
-baseurl: '/'
+baseurl: '.'
 url: '/'
 twitter_username: mlhacks
 github_username: mlh-fellowship
