--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: fellowship@mlh.io
 description: >- # this means to ignore newlines until "baseurl:"
   This is my portfolio website!
 baseurl: '/prep-portfolio-22.AUG.PREP.2-team-1'
-url: 'deadreyo.github.io'
+url: 'deadreyo.github.io/prep-portfolio-22.AUG.PREP.2-team-1'
 twitter_username: mlhacks
 github_username: mlh-fellowship
 
